--- a/MobileApp/app/src/main/res/values/strings.xml
+++ b/MobileApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MobileApp</string>
+    <string name="settings_change">Editare</string>
+    <string name="back_menu">Back</string>
 </resources>
