--- a/MobileApp/app/src/main/res/values/strings.xml
+++ b/MobileApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MobileApp</string>
     <string name="settings_change">Editare</string>
     <string name="back_menu">Back</string>
+    <string name="setting_logout">Deconectare</string>
 </resources>
